# waypoint

./: main.py  pyproject.toml  pytest.ini
.github/workflows/: black.yml  pytest.yml
data/: airports.csv
tests/: test_djikstra.py  test_preprocessing.py
waypoint/: __main__.py  main.py  path.py  preprocessing.py
waypoint/algorithms/: bfs.py  djikstra.py
